# SheLLVM

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
.github/workflows/: cmake.yml
llvm/: CMakeLists.txt  FlattenPass.cpp  FlattenPass.h  GlobalToStackPass.cpp  GlobalToStackPass.h  InlineCtorsPass.cpp  InlineCtorsPass.h  MergeCallsPass.cpp  MergeCallsPass.h  PostcheckPass.cpp  PostcheckPass.h  PrecheckPass.cpp  PrecheckPass.h  PreparePass.cpp  PreparePass.h  SheLLVMPlugin.cpp
loaders/winnt/: winnt-loader.ll
tests/: CMakeLists.txt
tests/flatten/: basic.c
tests/global2stack/: circular.c  constexprs.c
